addded - to cells that are "no"

--- a/PageTable.org
+++ b/PageTable.org
@@ -684,43 +684,41 @@ gant = gnt chart of campaign
 blg = related blog post
 
 
- | solutions pages           | funx                    | form                       | launch  | graphic | Intro | exsum | ft. | ben | invstmt | rsch | usrstry | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf  | gant | related VR exp | legal | budget | tagline | Abstract | Description |
- | 1. architect              | blueprint               | sketch house               | feb 12  | +       | -     | -     | +   | +   | +       | -    | -       | -  | -   | -     | -      | -    | +   | -    | -      | -   | -    | google blocks  | -     | -      | +       | +        | +           |
- | 2. color                  | chose colors            | 3D Color Palet             | feb 12  | +       | -     | -     | +   | +   | -       | -    | -       | -  | -   | -     | -      | -    | +   | -    | -      | -   | -    | tilt brush     | -     | -      | +       | +        | +           |
- | 3. music                  | discover, share, create | Listen on the Moon         | feb 12  | +       | +     | +     | +   | +   | +       | +    | +       | +  | +   | -     | -      | +    | -   | -    | +      | -   | -    | accounting     | -     | -      | +       | +        | +           |
- | 4. bloomaway              | transportati            | embossed map               | feb 12  | +       | -     | -     | +   | +   | -       | -    | -       | -  | -   | -     | -      | -    | -   | -    | -      | -   | -    | realities      | -     | -      | +       | +        | +           |
- | 5. infinite               | view content            | art gallery                | feb 12  | +       | +     | -     | -   | -   | -       | -    | -       | -  |     | yes   | yes    | no   | yes | yes  | no     | yes | no   |                | yes   | -      | -       | -        | -           |
- | 6. facematch              | ad-view verify          | phone application          | feb 12  | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 7. live stream            | telepresence            | live 360 video)            | feb 12  | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 8. nye                    | entertainment           | cg lobby + 360 video       | feb 12  | -       | -     | -     | -   | -   | -       | -    | -       | -  | y   |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 9. live forever           | immortalize             | 3d avatar                  | march 1 | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 10. enterprise b2b        | sales preentation       | inside product             |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 11. exhibit               | onsite edu / ent        | microarch + underwater     |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 12. festival              | Live Event Marketing    | microar + perform on stage |         | -       | -     | -     | -   | -   | -       | -    | -       | -  | no  | no    | no     | yes  | no  | no   | yes    | no  | no   | no             | no    | -      | -       | -        | -           |
- | 13. wellness              | Mindfullness in VR      | nature                     |         | -       | -     | -     | -   | -   | -       | -    | -       | -  | no  | no    | no     | no   | no  | no   | no     | no  | no   | no             | no    | -      | -       | -        | -           |
- | 14. 3d brand design       | 3d brand design         | 3d files                   |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 15. anon on blockchain    | anonymous comp          | phone app                  |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 16. ar branding           | brand, engage           | ar app phone               |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 17. ar reatil             | sell on site            | vr store                   |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 18. ar event              | engage brand, sell      | phone app w/ pics          |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | --     | -       | -        | -           |
- | 19. fifa                  |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -- |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 20. foodman               |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 21. health care           |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 22. hotels                | sell brand hotel rooms  | bloomaway                  |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 23. in vr                 |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 24. sports                | training                | on-feild sim               |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 25. token sale            |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 26. encyclopedia          | index information       | visual encyclopedia        |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 27. xr-first website      |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 28. emacs GUI             |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 29. torus                 | consume information     | torus (disformed sphere)   |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | --     | -       | -        | -           |
- | 30. existing int he world | edu/ent                 | book/text                  |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 31. bioler room           | social gather/ ent      | bar/concert/studio/party   |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 32. Catalog               |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 33. city dev              |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 34. coaches               |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -- |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
- | 36. scavenger hunt        |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -       | -  |     |       |        |      |     |      |        |     |      |                |       | -      | -       | -        | -           |
+ | solutions pages           | funx                    | form                       | launch  | graphic | Intro | exsum | ft. | ben | invstmt | rsch | ursty | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal | budget | tagline | Abstract | Description |
+ | 1. architect              | blueprint               | sketch house               | feb 12  | +       | -     | -     | +   | +   | +       | -    | -     | -  | -   | -     | -      | -    | +   | -    | -      | -  | -    | google blocks  | -     | -      | +       | +        | +           |
+ | 2. color                  | chose colors            | 3D Color Palet             | feb 12  | +       | -     | -     | +   | +   | -       | -    | -     | -  | -   | -     | -      | -    | +   | -    | -      | -  | -    | tilt brush     | -     | -      | +       | +        | +           |
+ | 3. music                  | discover, share, create | Listen on the Moon         | feb 12  | +       | +     | +     | +   | +   | +       | +    | +     | +  | +   | -     | -      | +    | -   | -    | +      | -  | -    | accounting     | -     | -      | +       | +        | +           |
+ | 4. bloomaway              | transportati            | embossed map               | feb 12  | +       | -     | -     | +   | +   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | realities      | -     | -      | +       | +        | +           |
+ | 5. infinite               | view content            | art gallery                | feb 12  | +       | +     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | n-   |                | yes   | -      | -       | -        | -           |
+ | 6. facematch              | ad-view verify          | phone application          | feb 12  | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 7. live stream            | telepresence            | live 360 video)            | feb 12  | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 8. nye                    | entertainment           | cg lobby + 360 video       | feb 12  | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 9. live forever           | immortalize             | 3d avatar                  | march 1 | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 10. enterprise b2b        | sales preentation       | inside product             |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 11. exhibit               | onsite edu / ent        | microarch + underwater     |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 12. festival              | Live Event Marketing    | microar + perform on stage |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | no             | no    | -      | -       | -        | -           |
+ | 13. wellness              | Mindfullness in VR      | nature                     |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | no             | no    | -      | -       | -        | -           |
+ | 14. 3d brand design       | 3d brand design         | 3d files                   |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 15. anon on blockchain    | anonymous comp          | phone app                  |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 16. ar branding           | brand, engage           | ar app phone               |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 17. ar reatil             | sell on site            | vr store                   |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 18. ar event              | engage brand, sell      | phone app w/ pics          |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 19. fifa                  |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -- | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 20. foodman               |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 21. health care           |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 22. hotels                | sell brand hotel rooms  | bloomaway                  |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 23. in vr                 |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 24. sports                | training                | on-feild sim               |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 25. token sale            |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 26. encyclopedia          | index information       | visual encyclopedia        |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 27. xr-first website      |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 28. emacs GUI             |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 29. torus                 | consume information     | torus (disformed sphere)   |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | --     | -       | -        | -           |
+ | 30. existing int he world | edu/ent                 | book/text                  |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 31. bioler room           | social gather/ ent      | bar/concert/studio/party   |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 32. Catalog               |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 33. city dev              |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 34. coaches               |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -- | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
+ | 36. scavenger hunt        |                         |                            |         | -       | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    |                |       | -      | -       | -        | -           |
 
 
- fr* TB 
-* TB 
