--- a/Pages/1Solutions/1Products/**Products_abstract.org
+++ b/Pages/1Solutions/1Products/**Products_abstract.org
@@ -1,3 +1,21 @@
-* Products
+* Header
+Products
 
-We desgin products for businesses and artists.  We develop visual tools that simplify xr technology into intuitive design.  These interfaces, softwares a nd events are fundamental solutions for developing content, producing experiences and building virtual worlds.
+* Second
+
+We develop XR for artists and businesses, empowing the design and deployment of virtually anything.
+
+* Abstract
+- Bloomaway
+- Infinite Gallery
+- Architecture XR
+- New Year's Eve
+- Torus XR
+- Color XR
+- Music XR
+- Festival XR
+- Hotels XR
+- Sports XR
+- Live Stream 360
+- Exhibit XR
+- VR Encyclopedia
