--- a/Pages/1Solutions/2Consultation/consultationintro---4web.org
+++ b/Pages/1Solutions/2Consultation/consultationintro---4web.org
@@ -3,34 +3,33 @@
 * Header
 Consultation
 
-* Tag
-*Why develop customized XR Media?*
+* Second
+
+We provide access to advance technologies.
+
+- Industry Solutions
+- Tactical Applications
+- Learning Lab
 
 * Abstract
 
-Virtual and Augmented Reality (VR/AR) are two exponential technologies
-categorized as "Extended Reality" (XR), which create 3D media using spatial computations
-in real time. They will increasingly become a part of our everyday. By wearing a "head
-mounted display" (HMD), one will engage simulated environments, digital models, and
-other dynamic information for entertainment, education, productivity, and much more.
-Twenty-five percent of the US population will have adopted AR/VR in their homes in the
-next five years. (Smart phones reached 25% in 2011)
+XR [Extended Reality], such as Virtual reality (VR) and Augmented Reality (AR) empower communication, collaboration and learning.  XR media is interactive, dynamic and concious of space.  
+
+
+These technologies will increasingly be in the home.   Through your phone, or XR glasses/goggles, you can engage simulate environments, digital models, and other dynamic 3D information for entertainment, education, productivity, and much more.
+
+Historical rates of technology adoption suggest twenty-five percent of the US population will have adopted AR/VR in their homes in the next five years.
 
 XR Media can be the ultimate communication tool, or the reason your business falls
-behind. XR is the next frontier of human connectivity.
+behind. 
 
-**
-
-
-** Consultation
+XR is the next frontier of human connectivity.
 
 
 
+* Content
 
-We provide access to advance technologies.  We’ll help you understand, strategize and produce XR media.  Production services include design, development and deployment.   
-
-
-
+  We’ll help you understand, strategize and produce XR media.  Production services include design, development and deployment.   
 
 
  The skills required to produce 3d virtual media (XR) are broad and deep, but we'll keep you focused.  By internalizing the basics of xr hardware and xr software you'll be familiar with why the latest technological breakthroughs, and understand why they  are indeed breakthroughs.  With this, you'll innovative ways to improve your business that the competition is not yet equiped to think up themselves.   Arm yourself with knowledge and your business excel in this new wave of media technologies 
