automible, seo and page tabe updates

--- a/0admin/seotitles.org
+++ b/0admin/seotitles.org
@@ -117,19 +117,37 @@ vr health care, xr health care, virtual reality and health, healthy living with 
 ** VR Instal
 
 ** Training
+
+leanring, learnxr training, tutor, educaiton, class, how to, uderstand xr course, xr bootcamp campxr, trainxr
    
 ** Learning
-   
+ 
+understand, know, educate, eduxr, teacher, tutor, tutorial, how-to, mind, comprehend, listen, 
+
+ 
 ** production
    
+
+produce, develope, make, create, xr, developexr, createxr, producexr, maker, makexr
+
 ** Design
    
+deisgnxr, artxr, geometry, geometryxr, create, xrcolor, xrshape, xrart, xrdesign, 
+
 ** sketching
    
+sketching, xrsketch, xrdraw, story, sketin-artist, hiring, 
+
 ** scripting
+
+script, xrscript, write, story, scriptxr
+
 
 ** storyboarding
    
+
+storyboard, characters, develope characters, xrcharacters, xrctoryboard, xrscenes
+
 ** Develop
    
 ** game engine
